--- a/colorbox/colorbox.html
+++ b/colorbox/colorbox.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="page-bg">
+        <p class="para">Please click any of the buttons to change the color of the box</p>
+        <p class="note">"Click on undo/redo button only once to get previous/next colors accordingly"</p>
         <div class="button-container">
+
             <button id="red" class="button red">red</button>
             <button id="yellow" class="button yellow">yellow</button>
             <button id="blue" class="button blue">blue</button>
@@ -21,9 +24,8 @@
             <button class="redo" id="redo">Redo</button>
         </div>
         <div class="box" id="box">
-
+            fill the color by clicking on the buttons
         </div>
     </div>
-    <script src="colorbox.js"></script>
 </body>
 </html>
