--- a/colorbox/colorbox.html
+++ b/colorbox/colorbox.html
@@ -27,5 +27,6 @@
             fill the color by clicking on the buttons
         </div>
     </div>
+    <script src="colorbox.js"></script>
 </body>
 </html>
