--- a/Table creation/table.html
+++ b/Table creation/table.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-<head> </head>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Box</title>
+    <link rel="stylesheet" href="table.css">
+    
+</head>
 <body>
     <div class="app-bg">
         <h1 class="heading">Create Table</h1>
@@ -20,6 +25,7 @@
 
         </div>
     </div>
+    <script src="table.js"></script>
 </body>
 
 </html>
